--- a/style.css
+++ b/style.css
@@ -4,23 +4,25 @@ html {
 
 body {
     height: 100%;
+    background-color: #ede6db;
     font-family: 'Merriweather Sans', sans-serif;
 }
 
 /*MENU*/
 nav {
-    background-color: #cdacac;
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
+    padding-bottom: 20px;
     padding-left: 400px;
     padding-right: 400px;
+    position: relative;
 }
 
 nav a {
     font-size: 15px;
     text-decoration: none;
-    color: #fdf6fd;
+    color: black;
     font-weight: bold;
 }
 
@@ -55,7 +57,6 @@ nav a:hover {
 
 .sectionwrapper {
     display: flex;
-    padding-top: 20px;
 }
 
 @media only screen and (max-width: 800px) {
@@ -77,10 +78,47 @@ nav a:hover {
     width: 100%;
 }
 
-/*Menu_CV*/
-
-.om {
-    padding-bottom: 20px;
-}
 
 /*______*/
+
+
+/*Portfolio*/
+
+h1 {
+    font-size: 30px;
+}
+
+.sectionwrapper2 {
+    display: flex;
+}
+
+@media only screen and (max-width: 1200px) {
+    .sectionwrapper2 {
+        flex-wrap: wrap;
+    }
+}
+
+
+.tema {
+    background-color: #e3dbce;
+    flex-basis: 300px;
+    margin: 20px;
+    padding: 10px;
+    justify-content: space-between;
+}
+
+.tema a {
+    color: black;
+    text-decoration: none;
+}
+
+.tema a:hover {
+    text-decoration: underline;
+}
+
+.opgave {
+    padding: 5px;
+    border: 1px dashed #b4ada1;
+}
+
+/*_______*/
