--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@ body {
     font-family: 'Merriweather Sans', sans-serif;
 }
 
+footer {
+    font-size: 10px;
+    text-align: center;
+    background-color: #e3dbce;
+    margin: 5px;
+    padding: 5px;
+}
+
 /*MENU*/
 nav {
     display: flex;
@@ -42,7 +50,7 @@ nav a:hover {
 
 /*Forside*/
 #splash {
-    background-image: url(splash.svg);
+    background-image: url(splash2.svg);
     width: 100%;
     height: 110%;
     background-size: cover;
@@ -105,6 +113,7 @@ h1 {
     margin: 20px;
     padding: 10px;
     justify-content: space-between;
+
 }
 
 .tema a {
@@ -120,5 +129,7 @@ h1 {
     padding: 5px;
     border: 1px dashed #b4ada1;
 }
+
+
 
 /*_______*/
