--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ nav a:hover {
 
 /*Forside*/
 #splash {
-    background-image: url(splash2.svg);
+    background-image: url(splash.png);
     width: 100%;
     height: 110%;
     background-size: cover;
